2003-01-01  Derek Atkins  <derek@ihtfp.com>

	* src/register/ledger-core/split-register-control.c: invert the
	  exchange rate when we're swapping currencies, since the logic
	  of the transfer dialog was reversed.  Fixes bug #102157

	* src/gnome-utils/dialog-transfer.c: call the to_amount_update_cb
	  handler during certain paths of the ok_cb because the focus-out
	  signal may not get handled in all cases -- so force the issue.
	  Fixes bug #102163

	* src/gnome-utils/dialog-transfer.c: always set the exchange-rate
	  as a positive value (use ABS).  Fixes the rest of #102163.

	* src/register/ledger-core/split-register-layout.c: fix the
	  rate_cell layout for general ledgers.  Fixed the critical
	  failure from bug #101000

	* src/gnome-search/search-numeric.c:
	* src/gnome-search/search-double.c:
	* src/gnome-search/search-int64.c:
	  read the value out of the GNCAmountEdit entry when we create
	  the Query Predicate, because we're not getting the amount_changed
	  signal.  Fixes #101000.

	* src/business/business-core/gncInvoice.[ch]: create new function
	  for logic to apply a payment.  Moved logic from dialog-payment.
	* src/business/business-gnome/dialog-payment.c: move logic to
	  apply payment to business-core.

	* src/engine/Account.[ch]: add an xaccAccountRemoveLot() function to allow
	  the LOT code to clear memory when you destroy a lot.  Fixes a crash
	  when you destroy a lot.
	* src/engine/Transaction.[ch]: add an xaccTransClearReadOnly() function
	  to let you clear the flag so you can then remove an transaction.  Only
	  for internal uses only!  This is used by the Invoice UnPost code.
	* src/engine/gnc-lot.c: remove the lot from the account's list of lots
	  when the last split is gone.

	* src/business/business-core/gncInvoice.[ch]: implement Unpost function
	* src/business/business-ledger/gncEntryLedger.[ch]: change the
	  set_readonly() function to let you toggle back and forth between
	  readonly and readwrite ledgers.